sample/pvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      lbp: pod-pvc-nginx
  replicas: 1
  template:
    metadata:
      name: pod-vol-pvc2
      namespace: default
      labels:
        lbp: pod-pvc-nginx
    spec:
      containers:
      - name: myapp
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: mypvc2
