sample/pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-vol-pvc2
  namespace: default
  labels:
    lbp: pod-pvc-nginx
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html
    persistentVolumeClaim:
      claimName: mypvc2
