sample/redis-slave-deploymet.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: redis-slave
  labels:
    app: redis
spec: 
  selector: 
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels: 
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
        - image: anjia0532/google-samples.gb-redisslave:v3
          name: slave
          resources:
            requests:
              cpu: 100m 
              memory: 100Mi
          ports:
          - containerPort: 6379
