sample/two-container-pod.yaml
apiVersion: v1
metadata:
  name:  two-containers
kind: Pod
spec:
  restartPolicy: Never
  volumes:
    - name:  shared-data
      emptyDir:  {}
  containers:
    - image:  nginx
      name: nginx-container
      volumeMounts:
        - name:  shared-data
          mountPath: /usr/share/nginx/html
    - image:  debian
      name: debian-container
      volumeMounts:
        - name:  shared-data
          mountPath:  /pod-data
      command: ["/bin/bash"]
      args: ["-c", "echo Hello from the debian container > /pod-data/index.html"]
