sample/pvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  pvc-nginx
spec:
  selector:
    app:  pod-vol-pvc2
  type:  LoadBalancer
  ports:
  - protocol: "TCP"
    port:  1180
    targetPort:  80
